config/envoy.yaml

admin:
  address:
    socket_address: 
      address: 0.0.0.0 
      port_value: 8081

static_resources:
  listeners:
    - name: default_listener
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 80
      filter_chains:
        - filters:
#          - name: envoy.filters.network.local_ratelimit
#            typed_config:
#              "@type": type.googleapis.com/envoy.config.filter.network.local_rate_limit.v2alpha.LocalRateLimit
#              stat_prefix: local_rate_limiter
#              token_bucket:
#                max_tokens: 100
#                tokens_per_fill: 1
#                fill_interval: 60s
          - name: envoy.filters.network.http_connection_manager
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
              codec_type: auto
              stat_prefix: ingress_http
              route_config:
                name: local_route
                virtual_hosts:
                  - name: backend
                    domains: ["*"]
                    routes:
                      - match: { prefix: "/0" }
                        route:
                          cluster: service_backend00
                          prefix_rewrite: "/"
# fresh start
                        typed_per_filter_config:
                          envoy.filters.http.local_ratelimit:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                            stat_prefix: route0_rate_limit
                            token_bucket: # 10 req/min 
                              max_tokens: 10
                              tokens_per_fill: 10
                              fill_interval: 60s
                            filter_enabled:
                              runtime_key: route2_limit_enabled
                              default_value:
                                numerator: 100
                                denominator: HUNDRED
                            filter_enforced:
                              runtime_key: route0_limit_enforced
                              default_value:
                                numerator: 100
                                denominator: HUNDRED
# fresh end
                      - match: { prefix: "/1" }
                        route: 
                          cluster: service_backend01
                          prefix_rewrite: "/"
                      - match: { prefix: "/" }
                        route: 
                          cluster: service_backend00
                          prefix_rewrite: "/"
# fresh start
                        typed_per_filter_config:
                          envoy.filters.http.local_ratelimit:
                            "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                            stat_prefix: route_root_rate_limit
                            token_bucket: #1000 req/min
                              max_tokens: 1000
                              tokens_per_fill: 1000
                              fill_interval: 60s
                            filter_enabled:
                              runtime_key: route2_limit_enabled
                              default_value:
                                numerator: 100
                                denominator: HUNDRED
                            filter_enforced:
                              runtime_key: route0_limit_enforced
                              default_value:
                                numerator: 100
                                denominator: HUNDRED
# fresh end
              http_filters:
# fresh start
                - name: envoy.filters.http.local_ratelimit
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                    stat_prefix: http_local_rate_limiter

                - name: envoy.filters.http.local_ratelimit
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                    stat_prefix: route0_rate_limit

                - name: envoy.filters.http.local_ratelimit
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
                    stat_prefix: route_root_rate_limit
# fresh end
                - name: envoy.filters.http.router
                  typed_config:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: service_backend00
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_backend00
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 95.111.247.179
                    port_value: 8888

    - name: service_backend01
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: service_backend01
        endpoints:
          - lb_endpoints:
            - endpoint:
                address:
                  socket_address:
                    address: 95.111.247.179
                    port_value: 8889


# ratelimit config sarting here
#                        typed_per_filter_config:
#                          envoy.filters.http.local_ratelimit:
#                            "@type": type.googleapis.com/envoy.extensions.filters.http.local_ratelimit.v3.LocalRateLimit
#                            stat_prefix: route2_rate_limit0
#                            token_bucket:
#                              max_tokens: 2
#                              tokens_per_fill: 1
#                              fill_interval: 60s
#                            filter_enabled:
#                              runtime_key: route2_limit_enabled0
#                              default_value:
#                                numerator: 100
#                                denominator: HUNDRED
#                            filter_enforced:
#                              runtime_key: route2_limit_enforced0
#                              default_value:
#                                numerator: 100
#                                denominator: HUNDRED
#                            response_headers_to_add:
#                              - append: false
#                                header:
#                                  key: x-local-rate-limit
#                                  value: 'true'
# ratelimit config ending here
